--- a/server/app/views/sign_in.scala.html
+++ b/server/app/views/sign_in.scala.html
@@ -2,17 +2,17 @@
 
 @main("ユーザー作成") {
 
-<form class="form-horizontal" role="form" action="@routes.UserController.doSignIn">
+<form class="form-horizontal" role="form" action="@routes.UserController.doSignIn" method="POST">
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
         <label for="password" class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
