--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -7,11 +7,18 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
+        <link rel="stylesheet" media="screen"  href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+    <ul class="nav nav-tabs">
+            <li><a href="/">マイページ</a></li>
+    <li><a href="/timeline/all">タイムライン</a></li>
+    <li><a href="/timeline/write">書き込み</a></li>
+    <li><a href="/sign_out">ログアウト</a></li>
+    </ul>
+
         @content
     </body>
 </html>
